# SpikeCenter-Web

./: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/platform/: error.rs  mod.rs
apps/api/src/platform/core/: middleware.rs  mod.rs  types.rs
apps/api/src/platform/spikescout/: errors.rs  mod.rs  types.rs
apps/api/src/platform/spikescout/routes/: assignments.rs  mod.rs
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/lib/api/: client.dart  types.dart
apps/mobile/lib/auth/: auth_store.dart
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/web/: components.json  eslint.config.js  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: providers.tsx
tooling/eslint-config/: README.md  base.js  next.js  package.json  react-internal.js
tooling/typescript-config/: README.md  package.json
