[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
redis = {  version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
dotenvy = "0.15.7"
config = "0.15.15"
axum = "0.8.4"
deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "serde"] }
